--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -17,7 +17,7 @@ menu:
   ドット会の入試分析: /categories/analysis
   ドット会の問題: /categories/questions
   ドット会のデータ: /categories/data
-  ドット会の中の人: /categories/profile
+  ドット会について: /about
 
 category_ui: index
 
