--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1,4 +1,5 @@
 font:
+  global-font-size: 16px
   font-family: "'Shippori Mincho', serif"
 
 aside:
@@ -45,8 +46,21 @@ darkmode:
 
 readmode: true
 
-copyright_url: https://dotkai.netlify.app
-
 toc:
   enable: true
   style_simple: true
+
+theme_color:
+  enable: true
+  main: "#184D8F"
+  paginator: "#00c4b6"
+  button_hover: "#FF7242"
+  text_selection: "#00c4b6"
+  link_color: "#99a9bf"
+  meta_color: "#858585"
+  hr_color: "#A4D8FA"
+  code_foreground: "#F47466"
+  code_background: "rgba(27, 31, 35, .05)"
+  toc_color: "#00c4b6"
+  blockquote_padding_color: "#184D8F"
+  blockquote_background_color: "#184D8F"
