fixed to add margin

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -60,6 +60,7 @@ inject:
     -   gtag('js', new Date());
     -   gtag('config', 'G-TP4NWXFXTW');
     - </script>
+    - <link rel="stylesheet" href="/custom_css.css" />
 
 darkmode:
   enable: false
