--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: ドット会
-subtitle: Z会とは無関係です
-description: Z会じゃないよ
+subtitle: 受験情報サイト
+description: Z会大好き元受験生。東大理一塾無し現役合格。
 keywords:
 author: hanaofan
 language: ja
