--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: ドット会
 subtitle: 受験情報サイト
-description: Z会大好き元受験生。東大理一塾無し現役合格。
+description: Z会大好き元受験生。東京大学理科一類。
 keywords:
 author: hanaofan
 language: ja
