--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -61,7 +61,15 @@ inject:
     -   gtag('config', 'G-TP4NWXFXTW');
     - </script>
     - <link rel="stylesheet" href="/custom_css.css" />
-
+    - <script type="text/x-mathjax-config">
+    -     MathJax.Hub.Config({
+    - "       tex2jax: {"
+    - "        inlineMath: [['$','$'], ['\\\\(','\\\\)']]"
+    - "      },"
+    - "       showProcessingMessages: false"
+    - "    });"
+    - </script>
+    - <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 darkmode:
   enable: false
 
