--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-seo-friendly-sitemap": "^0.2.1",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-multiauthor": "^0.0.1",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-markdown-it": "^5.0.0",
     "hexo-renderer-pug": "^1.0.0",
