--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 # Site
 title: ドット会
 subtitle: 受験情報サイト
-description: Z会大好き元受験生。東京大学理科一類。
+description: 実体験に基づいた受験情報をお届けします。
 keywords:
-author: hanaofan
+author: ドット会
 language: ja
 timezone: ''
 
