fixed some authors

--- a/source/_authors/twilight.yml
+++ b/source/_authors/twilight.yml
@@ -1,2 +1,3 @@
 name: twilight
-about: よろしくお願いします。
+about: 鉄道オタク
+avatar: https://lh3.googleusercontent.com/pw/ACtC-3e_eGEwd7k_TQbPxvhCrZ_Wz579LLh1b04KOWs5EWYC2A10KqtuzGovSW85OuBH--7SxBFhiSUbmVA95FTLyMAbQudc_BGjxWKiXvmJKIj7w3b61eNy7T1iPRDFnITs5etyfm7oKqYzZNQ9UVe-6ZypoA=w500-h375-no?authuser=0
